--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <main>
         <header class="container">
-            <nav class="color-BG-nav">
+            <nav class="color-BG-nav ">
                 <ul class="nav nav-tabs flex-row-reverse ">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">বাংলা</a>
@@ -69,7 +69,40 @@
                                     <span>Winter Collection</span>
                                     <i class="fa-solid fa-angle-right"></i>
                                 </div>
-                            </a></li>
+                                <ul class="mega-menu ps-0">
+                                    <li><a href="">
+                                            <div class="d-flex justify-content-between">
+                                                <span>Hoodies</span>
+                                                <i class="fa-solid fa-angle-right"></i>
+                                            </div>
+                                        </a></li>
+                                    <li><a href="">
+                                            <div class="d-flex justify-content-between">
+                                                <span>Jackets</span>
+                                                <i class="fa-solid fa-angle-right"></i>
+                                            </div>
+                                        </a></li>
+                                    <li><a href="">
+                                            <div class="d-flex justify-content-between">
+                                                <span>Sweaters</span>
+                                                <i class="fa-solid fa-angle-right"></i>
+                                            </div>
+                                        </a></li>
+                                    <li><a href="">
+                                            <div class="d-flex justify-content-between">
+                                                <span>Ladies Winter Fashion</span>
+                                                <i class="fa-solid fa-angle-right"></i>
+                                            </div>
+                                        </a></li>
+                                    <li><a href="">
+                                            <div class="d-flex justify-content-between">
+                                                <span>Winter Gadgets</span>
+                                                <i class="fa-solid fa-angle-right"></i>
+                                            </div>
+                                        </a></li>
+                                </ul>
+                            </a>
+                        </li>
                         <li><a href="">
                                 <div class="d-flex justify-content-between">
                                     <span>Men's Shopping</span>
@@ -113,16 +146,107 @@
                                 </div>
                             </a></li>
                         <li><a href="">
-                                <div class="d-flex justify-content-between">
+                                <div class="d-flex justify-content-between p-absolute">
                                     <span>Watch</span>
                                     <i class="fa-solid fa-angle-right"></i>
                                 </div>
                             </a></li>
                     </ul>
                 </div>
-                <div class="col-lg-9"></div>
+                <div class="col-lg-9">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                                class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                                aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                                aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="images/slide image/slide-1.png" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="images/slide image/slide-2.png" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="images/slide image/slide-3.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                </div>
             </div>
         </header>
+        <section class="container">
+            <h1>T-Shirt</h1>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/t-shirt/t-shirt-1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title fs-1">৳<span>190</span></h5>
+                            <p class="card-text text-muted fs-3"> <del>৳240</del></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/t-shirt/t-shirt-2.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title fs-1">৳<span>190</span></h5>
+                            <p class="card-text text-muted fs-3"> <del>৳240</del></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/t-shirt/t-shirt-3.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title fs-1">৳<span>190</span></h5>
+                            <p class="card-text text-muted fs-3"> <del>৳240</del></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/t-shirt/t-shirt-4.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title fs-1">৳<span>190</span></h5>
+                            <p class="card-text text-muted fs-3"> <del>৳240</del></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/t-shirt/t-shirt-5.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title fs-1">৳<span>190</span></h5>
+                            <p class="card-text text-muted fs-3"> <del>৳240</del></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/t-shirt/t-shirt-6.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title fs-1">৳<span>190</span></h5>
+                            <p class="card-text text-muted fs-3"> <del>৳240</del></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- JS file attachment -->
 
